add contents,update share button

--- a/pages/endeavors/env.html
+++ b/pages/endeavors/env.html
@@ -23,17 +23,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>寮生活 | 高城寮</title>
+    <title>寮内環境の整備 | 高城寮</title>
     <meta name="keywords" content="高城寮">
     <meta name="description" content="高城寮公式ホームページです。">
     <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
-    <meta property="og:title" content="寮生活 | 高城寮" />
+    <meta property="og:title" content="寮内環境の整備 | 高城寮" />
     <meta property="og:type" content="website">
     <meta property="og:description" content="高城寮公式ホームページです。" />
     <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/open_graph.png" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:site" content="@TakajoDormitory">
-    <meta property="og:site_name" content="寮生活 | 高城寮" />
+    <meta property="og:site_name" content="寮内環境の整備 | 高城寮" />
     <meta property="og:locale" content="ja_JP" />
 </head>
 
@@ -76,7 +76,9 @@
     </div>
     <!--container-->
     <div id="container">
-
+        <h4>寮内環境の整備</h4>
+        <p class="content">高城寮では、下級生による寮内の清掃が行われています。これは、寮の衛生の向上及び維持をすることで、寮生全員が住みやすい寮にするためです。<br>
+            また、閉寮の際には居室の清掃及び教員によるチェックが行われ、清潔な状態で新学期を迎えます。</p>
     </div>
     <!--footer-->
     <div class="footer">
