--- a/pages/endeavors/meet.html
+++ b/pages/endeavors/meet.html
@@ -76,6 +76,16 @@
   </div>
   <!--container-->
   <div id="container">
+    <div class="pair-left">
+      <div>
+        <h4>寮生同士の交流</h4>
+        <div class="left-content">
+          <p>高城寮では、新入寮生歓迎マッチや七夕会、クリスマス会などの寮生同士の交流の機会が設けられています。他学年の先輩や後輩と、新たな関係を築くことができます。<br>
+          </p>
+        </div>
+      </div>
+      <img src="../../assets/images/Tail.JPG">
+    </div>
   </div>
 
   <!--footer-->
