--- a/pages/endeavors/safety.html
+++ b/pages/endeavors/safety.html
@@ -76,7 +76,15 @@
   </div>
   <!--container-->
   <div id="container">
-
+    <div class="pair-left">
+      <div>
+        <h4>安全の確保</h4>
+        <div class="left-content">
+          <p>高城寮では、本寮で発生する可能性のある災害に対する意識向上を図るとともに、万一災害が発生した場合を想定して、定期的に避難訓練を実施しています。本寮の一部は周南市の土砂災害警戒区域内に入っており、寮生一人ひとりの災害への意識が重要です。</p>
+        </div>
+      </div>
+      <img class="wide" src="../../assets/images/EmergencyDrill.JPG" alt="避難訓練の様子">
+    </div>
   </div>
 
   <!--footer-->
