--- a/pages/english/env.html
+++ b/pages/english/env.html
@@ -79,6 +79,10 @@
   </div>
   <!--container-->
   <div id="container">
+    <h4>Living Environment</h4>
+    <p class="content">In Takajo dormitory, Lower grades clean it. The purpose of it is to improve and maintain the hygiene of the dormitory and to make it a
+      comfortable place for all the students to live. <br>In addition, when the dormitory is closed, the rooms are cleaned and checked by the teachers to start
+      the new semester in a clean condition.</p>
   </div>
 
   <!--footer-->
