--- a/pages/english/event.html
+++ b/pages/english/event.html
@@ -159,7 +159,6 @@
       <tr>
         <th>November</th>
         <td>
-          Dormitory festival<br>
           Study meeting<br>
           Dormitory tour
         </td>
@@ -167,7 +166,7 @@
       <tr>
         <th>December</th>
         <td>
-          Farewell party for graduates<br>
+          Christmas party<br>
           Closing a dormitory
         </td>
       </tr>
@@ -178,6 +177,7 @@
           Dormitory Student Council Election<br>
           Study meeting<br>
           Dormitory Student Association Officers' Handover Meeting<br>
+          Farewell party for graduates
         </td>
       </tr>
       <tr>
