--- a/pages/english/meet.html
+++ b/pages/english/meet.html
@@ -79,6 +79,17 @@
   </div>
   <!--container-->
   <div id="container">
+    <div class="pair-left">
+      <div>
+        <h4>Interaction among dormitory students</h4>
+        <div class="left-content">
+          <p>At Takajo Dormitory, there are opportunities for dormitory students to interact with each other, such as the New Resident Welcome Match, Tanabata
+            Party, and Christmas Party. This is a great way to build new relationships with seniors and juniors from other grades.<br>
+          </p>
+        </div>
+      </div>
+      <img src="../../assets/images/Tail.JPG">
+    </div>
   </div>
   <!--footer-->
   <div class="footer">
