--- a/pages/english/safety.html
+++ b/pages/english/safety.html
@@ -79,6 +79,17 @@
   </div>
   <!--container-->
   <div id="container">
+    <div class="pair-left">
+      <div>
+        <h4>Ensuring safety</h4>
+        <div class="left-content">
+          <p>In addition to raising awareness of disasters that may occur in our dormitory, Takajo Dormitory holds regular emergency drills in case a
+            disaster should occur. Part of the dormitory is located in the landslide disaster zone of Shunan City, each dormitory student needs to be aware of
+            disasters.</p>
+        </div>
+      </div>
+      <img class="wide" src="../../assets/images/EmergencyDrill.JPG" alt="EmergencyDrill">
+    </div>
   </div>
 
   <!--footer-->
