--- a/pages/english/studying.html
+++ b/pages/english/studying.html
@@ -79,6 +79,12 @@
   </div>
   <!--container-->
   <div id="container">
+    <h4>Educationnal Support</h4>
+    <p class="content">At Takajo Dormitory, we provide a variety of support services to make it easier for our residents to study. There are bookshelves and
+      computers in the cafeteria that all students can freely use to help them with their studies.<br>
+      　The boarders' association has a head dormitory supervisor and a study advisor who help students with their studies. Study sessions are held for regular
+      exams, and students gather in the dining hall to study. If they do not understand anything, they can immediately ask the study counselor for help, making
+      it an easy learning environment.</p>
   </div>
 
   <!--footer-->
