--- a/pages/event.html
+++ b/pages/event.html
@@ -152,7 +152,6 @@
       <tr>
         <th>11月</th>
         <td>
-          寮祭<br>
           勉強会<br>
           学寮見学会
         </td>
@@ -160,7 +159,7 @@
       <tr>
         <th>12月</th>
         <td>
-          予餞会<br>
+          クリスマス会<br>
           閉寮
         </td>
       </tr>
@@ -171,6 +170,7 @@
           寮生会選挙<br>
           勉強会<br>
           寮生会役員引継会<br>
+          予餞会
         </td>
       </tr>
       <tr>
