--- a/pages/student.html
+++ b/pages/student.html
@@ -89,9 +89,15 @@
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <li>寮食 食数管理システム(欠食申請)</li>
         </a>
+        <a target="_blank" rel="noopener noreferrer" href="http://153.127.26.186:40080/">
+          <li>電動自転車貸し出しシステム</li>
+        </a>
+        <a target="_blank" rel="noopener noreferrer" href="#">
+          <li>サーバ運用申請フォーム</li>
+        </a>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
-          <li>高城寮GitHub参加申込フォーム(学生のみ)</li>
+          <li>高城寮GitHub参加申請フォーム(学生のみ)</li>
         </a>
       </ul>
     </div>
