--- a/pages/notice/20201022-1.html
+++ b/pages/notice/20201022-1.html
@@ -88,13 +88,10 @@
       <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
     </div>
     <!-- 以下は編集しない -->
-    <div id="share"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
-      <div id="fb-root"></div>
-      <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-color="default" data-size="small" data-count="true"
-        style="display: none;"></div>
-      <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+    <div id="share">
+      <a id="fb-share" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+      <a id="tw-share" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+      <a id="line-share" target="_blank"><i class="fab fa-line fa-2x"></i></a>
     </div>
   </div>
   <!--footer-->
