--- a/pages/notice/template.html
+++ b/pages/notice/template.html
@@ -100,15 +100,10 @@
 
     <!-- 以下は編集しない -->
     <div id="share">
-      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
-      <div id="fb-root"></div>
+      <a id="fb-share" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+      <a id="tw-share" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+      <a id="line-share" target="_blank"><i class="fab fa-line fa-2x"></i></a>
     </div>
-    <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-color="default" data-size="small" data-count="true" style="display: none;">
-    </div>
-    <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
-  </div>
   </div>
 
   <!--footer-->
