add english content

--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -88,9 +88,15 @@
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <li>Manage system of dormitory meals</li>
         </a>
+        <a target="_blank" rel="noopener noreferrer" href="http://153.127.26.186:40080/">
+          <li>Bicycle rental system</li>
+        </a>
+        <a target="_blank" rel="noopener noreferrer" href="#">
+          <li>Server Operation Application Form</li>
+        </a>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
-          <li>GitHub for dormitory student</li>
+          <li>Takajo GitHub Application Form</li>
         </a>
       </ul>
     </div>
