put on images on the student page

--- a/pages/student.html
+++ b/pages/student.html
@@ -4,6 +4,7 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/styles/common.css" type="text/css">
+  <link rel="stylesheet" href="../assets/styles/student.css" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" href="../assets/images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -80,27 +81,42 @@
     <div class="middle">
       <h4 style="text-align:center;border-bottom: solid 3px #d59649;display: inline-block;">寮生用サイト一覧</h4>
     </div>
-    <div class="list">
-      <ul>
+    <div class="student">
+      <div class="student_element">
+        <p>寮の献立</p>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
-          <li>寮の献立</li>
+          <img src="../assets/images/student/kondate.png">
         </a>
+      </div>
+      <div class="student_element">
+        <p>寮食 食数管理システム(欠食申請)</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
-          <li>寮食 食数管理システム(欠食申請)</li>
+          <img src="../assets/images/student/NumberOfMeals.png">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="http://153.127.26.186:40080/">
-          <li>電動自転車貸し出しシステム</li>
+      </div>
+      <div class="student_element">
+        <p>電動自転車貸し出しシステム</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-domitory.tk/">
+          <img src="../assets/images/student/Bicycle.png">
         </a>
+      </div>
+      <div class="student_element">
+        <p>サーバ運用申請フォーム</p>
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <li>サーバ運用申請フォーム</li>
-        </a>
+          <a href="">
+            <img src="../assets/images/student/server.png">
+          </a>
+      </div>
+      <div class="student_element">
+        <p>高城寮GitHub参加申請フォーム</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
-          <li>高城寮GitHub参加申請フォーム(学生のみ)</li>
+          <img src="../assets/images/student/GitHub.png">
         </a>
-      </ul>
+      </div>
     </div>
+  </div>
   </div>
   <div class="footer">
     <img src="../assets/images/footer.png">
