add list on student page,update link on README.md

--- a/pages/student.html
+++ b/pages/student.html
@@ -83,9 +83,22 @@
     </div>
     <div class="student">
       <div class="student_element">
+        <p>電動自転車貸し出しシステム</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-domitory.tk/">
+          <img src="../assets/images/student/Bicycle.png">
+        </a>
+      </div>
+      <div class="student_element">
         <p>寮の献立</p>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
           <img src="../assets/images/student/kondate.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>外泊届</p>
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyAmPT3PdlNJEqdHkH2NvOXFUQTE0Q1lGTlZRSUtBRUhPT0JPSTYwUTJHOCQlQCN0PWcu">
+          <img src="../assets/images/student/gaihaku.png">
         </a>
       </div>
       <div class="student_element">
@@ -96,9 +109,10 @@
         </a>
       </div>
       <div class="student_element">
-        <p>電動自転車貸し出しシステム</p>
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-domitory.tk/">
-          <img src="../assets/images/student/Bicycle.png">
+        <p>グラウンド使用記録簿</p>
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?Host=Teams&lang=%7Blocale%7D&groupId=%7BgroupId%7D&tid=%7Btid%7D&teamsTheme=%7Btheme%7D&upn=%7Bupn%7D&id=XYP-cpVeEkWK4KezivJfyFRDvD4Mh2xOup53lI_6q5dUMzBVRjRNSFBDTTZTNUpQVThOTzk3SzJHSyQlQCN0PWcu">
+          <img src="../assets/images/student/ground.png">
         </a>
       </div>
       <div class="student_element">
