fix the link on the student page and the middle-contents position.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -94,8 +94,10 @@
   </div>
   <!--container-->
   <div id="container">
-    <h2 class="middle"><span style="border-bottom: solid 3px #d59649;">お問い合わせ</span></h2>
-    <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
+    <div class="middle">
+      <h4 class="middle-content">お問い合わせ</h4>
+      <p>ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
+    </div>
     <div id="contact">
       <p>学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
         Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
