--- a/pages/cost.html
+++ b/pages/cost.html
@@ -76,7 +76,7 @@
   </div>
   <!--container-->
   <div id="container" class="middle">
-    <h4 style="border-bottom: solid 3px #d59649;display: inline-block;">学寮経費</h4>
+    <h4 class="middle-content">学寮経費</h4>
     <table>
       <tr>
         <th><span class="table-header">寄宿料</span></th>
