--- a/pages/english/contact.html
+++ b/pages/english/contact.html
@@ -95,7 +95,10 @@
   </div>
   <!--container-->
   <div id="container">
-    <p class="middle">If you have any questions or comments, please send them to the dormitory.</p>
+    <div class="middle">
+      <h4 class="middle-content">Contact us</h4>
+      <p>If you have any questions or comments, please send them to the dormitory.</p>
+    </div>
     <div id="contact">
       <p>Dormitory contact information<br>〒745-8585 Gakuendai, Shunan City, Yamaguchi Prefecture<br>TEL&FAX : 0834-29-6236<br><br>Student Affairs
         Division<br>TEL :
