--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -4,6 +4,7 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/student.css" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" href="../../assets/images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -78,27 +79,57 @@
   </div>
   <!--container-->
   <div id="container">
-    <div class="list">
-      <ul>
-        <h2>Sites for students</h2>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
-          <li>Dormitory Meals Menu</li>
+    <div class="middle">
+      <h4 class="middle-content">Sites for students</h4>
+    </div>
+    <div class="student">
+      <div class="student_element">
+        <p>Bicycle rental system</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
+          <img src="../../assets/images/student/Bicycle.png">
         </a>
+      </div>
+      <div class="student_element">
+        <p>Dormitory Meals Menu</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
+          <img src="../../assets/images/student/kondate.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>Permission to stay out overnigh</p>
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyAmPT3PdlNJEqdHkH2NvOXFUQTE0Q1lGTlZRSUtBRUhPT0JPSTYwUTJHOCQlQCN0PWcu">
+          <img src="../../assets/images/student/gaihaku.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>Manage system of dormitory meals</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
-          <li>Manage system of dormitory meals</li>
+          <img src="../../assets/images/student/NumberOfMeals.png">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="http://153.127.26.186:40080/">
-          <li>Bicycle rental system</li>
+      </div>
+      <div class="student_element">
+        <p>The schoolyard used log</p>
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?Host=Teams&lang=%7Blocale%7D&groupId=%7BgroupId%7D&tid=%7Btid%7D&teamsTheme=%7Btheme%7D&upn=%7Bupn%7D&id=XYP-cpVeEkWK4KezivJfyFRDvD4Mh2xOup53lI_6q5dUMzBVRjRNSFBDTTZTNUpQVThOTzk3SzJHSyQlQCN0PWcu">
+          <img src="../../assets/images/student/ground.png">
         </a>
+      </div>
+      <div class="student_element">
+        <p>Server Operation Application Form</p>
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <li>Server Operation Application Form</li>
-        </a>
+          <a href="">
+            <img src="../../assets/images/student/server.png">
+          </a>
+      </div>
+      <div class="student_element">
+        <p>Takajo GitHub Application Form</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
-          <li>Takajo GitHub Application Form</li>
+          <img src="../../assets/images/student/GitHub.png">
         </a>
-      </ul>
+      </div>
     </div>
 
     <!--footer-->
