--- a/pages/student.html
+++ b/pages/student.html
@@ -79,12 +79,12 @@
   <!--container-->
   <div id="container">
     <div class="middle">
-      <h4 style="text-align:center;border-bottom: solid 3px #d59649;display: inline-block;">寮生用サイト一覧</h4>
+      <h4 class="middle-content">寮生用サイト一覧</h4>
     </div>
     <div class="student">
       <div class="student_element">
         <p>電動自転車貸し出しシステム</p>
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-domitory.tk/">
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
           <img src="../assets/images/student/Bicycle.png">
         </a>
       </div>
@@ -131,7 +131,7 @@
       </div>
     </div>
   </div>
-  </div>
+
   <div class="footer">
     <img src="../assets/images/footer.png">
     <a href="site.html">
