--- a/pages/english/cost.html
+++ b/pages/english/cost.html
@@ -35,12 +35,6 @@
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="About cost | Takajo dormitory" />
   <meta property="og:locale" content="ja_JP" />
-  <style>
-    #container .table-header {
-      padding: 3px;
-      border-bottom: solid 2px #fb5144;
-    }
-  </style>
 </head>
 
 <body>
@@ -86,7 +80,7 @@
   <!--container-->
   <div id="container">
     <div id="container" class="middle">
-      <h1>Cost of dormitory</h1>
+      <h4 class="middle-content">Cost of the dormitory</h4>
       <table>
         <tr>
           <th><span class="table-header">Accommodation fee</span></th>
