--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -91,7 +91,7 @@
       </div>
       <div class="student_element">
         <p>Dormitory Meals Menu</p>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
+        <a target="_blank" rel="noopener noreferrer" href="../../assets/pdfs/kondate.pdf">
           <img src="../../assets/images/student/kondate.png">
         </a>
       </div>
