--- a/pages/student.html
+++ b/pages/student.html
@@ -90,7 +90,7 @@
       </div>
       <div class="student_element">
         <p>寮の献立</p>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
+        <a target="_blank" rel="noopener noreferrer" href="../assets/pdfs/kondate.pdf">
           <img src="../assets/images/student/kondate.png">
         </a>
       </div>
