add contents on student page

--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
   <link rel="stylesheet" href="../../assets/styles/student.css" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" href="../../assets/images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -58,10 +59,12 @@
     </p>
     <nav id="bar">
       <ul>
-        <div class="search">
-          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-          <div class="gcse-search"></div>
-        </div>
+        <form action="result.html" class="search_container">
+          <div class="search_back">
+            <input type="text" size="25" placeholder="Search keywords" id="input" name="search-key">
+            <input type="submit" value="&#xf002">
+          </div>
+        </form>
         <li><a href="../../index.html">
             <h3 class="lang">JAPANESE</h3>
           </a></li>
@@ -96,17 +99,35 @@
         </a>
       </div>
       <div class="student_element">
-        <p>Permission to stay out overnigh</p>
+        <p>Permission to stay out overnight</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyAmPT3PdlNJEqdHkH2NvOXFUQTE0Q1lGTlZRSUtBRUhPT0JPSTYwUTJHOCQlQCN0PWcu">
           <img src="../../assets/images/student/gaihaku.png">
         </a>
       </div>
       <div class="student_element">
-        <p>Manage system of dormitory meals</p>
+        <p>Manage system of meals</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <img src="../../assets/images/student/NumberOfMeals.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>NITTC syllabus</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
+          <img src="../../assets/images/student/syllabus.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>NITTC calendar</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
+          <img src="../../assets/images/student/calendar.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>NITTC timetable</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/edu/jikanwari.html">
+          <img src="../../assets/images/student/jikanwari.png">
         </a>
       </div>
       <div class="student_element">
@@ -117,14 +138,14 @@
         </a>
       </div>
       <div class="student_element">
-        <p>Server Operation Application Form</p>
+        <p>Server operate application form</p>
         <a target="_blank" rel="noopener noreferrer" href="#">
           <a href="">
             <img src="../../assets/images/student/server.png">
           </a>
       </div>
       <div class="student_element">
-        <p>Takajo GitHub Application Form</p>
+        <p>Takajo GitHub application form</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
           <img src="../../assets/images/student/GitHub.png">
