--- a/pages/student.html
+++ b/pages/student.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/styles/common.css" type="text/css">
   <link rel="stylesheet" href="../assets/styles/student.css" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" href="../assets/images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -59,10 +60,12 @@
     </p>
     <nav id="bar">
       <ul>
-        <div class="search">
-          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-          <div class="gcse-search"></div>
-        </div>
+        <form action="result.html" class="search_container">
+          <div class="search_back">
+            <input type="text" size="25" placeholder="キーワード検索" id="input" name="search-key">
+            <input type="submit" value="&#xf002">
+          </div>
+        </form>
         <li><a href="english/index.html">
             <h3 class="lang">ENGLISH</h3>
           </a></li>
@@ -106,6 +109,24 @@
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <img src="../assets/images/student/NumberOfMeals.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>徳山高専 シラバス</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
+          <img src="../assets/images/student/syllabus.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>徳山高専 年間行事予定表</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
+          <img src="../assets/images/student/calendar.png">
+        </a>
+      </div>
+      <div class="student_element">
+        <p>徳山高専 授業時間割</p>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/edu/jikanwari.html">
+          <img src="../assets/images/student/jikanwari.png">
         </a>
       </div>
       <div class="student_element">
