--- a/pages/english/result.html
+++ b/pages/english/result.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
@@ -24,33 +24,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>寮内環境の整備 | 高城寮</title>
-    <meta name="keywords" content="高城寮">
-    <meta name="description" content="高城寮公式ホームページです。">
+    <title>Search Results | Takajo dormitory</title>
+    <meta name="keywords" content="Takajo dormitory,高城寮">
+    <meta name="description" content="The official site of takajo dormitory">
     <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
-    <meta property="og:title" content="寮内環境の整備 | 高城寮" />
+    <meta property="og:title" content="Search Results | Takajo dormitory" />
     <meta property="og:type" content="website">
     <meta property="og:description" content="高城寮公式ホームページです。" />
     <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/open_graph.png" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:site" content="@TakajoDormitory">
-    <meta property="og:site_name" content="寮内環境の整備 | 高城寮" />
+    <meta property="og:site_name" content="Search Results | Takajo dormitory" />
     <meta property="og:locale" content="ja_JP" />
 </head>
 
 <body>
+
     <!--header-->
     <header id="header">
-        <a href="../../index.html">
+        <a href="index.html">
             <h1 id="title">Takajo Dormitory</h1>
         </a>
-        <a href="../english/index.html">
-            <h1 id="lang">ENGLISH</h1>
+        <a href="../../index.html">
+            <h1 id="lang">JAPANESE</h3>
         </a>
-        <a href="../location.html"><i class="fas fa-map-marker-alt"></i></a>
+        <a href="Search Results.html"><i class="fas fa-map-marker-alt"></i></a>
         <i class="fas fa-search"></i>
     </header>
-
     <div id="wrapper">
         <p class="btn-gnavi">
             <span></span>
@@ -59,41 +59,46 @@
         </p>
         <nav id="bar">
             <ul>
-                <form action="../result.html" class="search_container">
+                <form action="result.html" class="search_container">
                     <div class="search_back">
-                        <input type="text" size="25" placeholder="キーワード検索" id="input" name="search-key">
+                        <input type="text" size="25" placeholder="Search keywords" id="input" name="search-key">
                         <input type="submit" value="&#xf002">
                     </div>
                 </form>
-                <li><a href="../english/index.html">
-                        <h3 class="lang">ENGLISH</h3>
+                <li><a href="../../index.html">
+                        <h3 class="lang">JAPANESE</h3>
                     </a></li>
-                <li><a href="../purpose.html">寮の目的</a></li>
-                <li><a href="../facility.html">施設,設備</a></li>
-                <li><a href="../event.html">寮生活</a></li>
-                <li><a href="../cost.html">学寮経費</a></li>
-                <li><a href="../student.html">寮生用ページ</a></li>
-                <li><a href="../contact.html">お問い合わせ</a></li>
+                <li><a href="location.html">
+                        <h3 class="access">Location</h3>
+                    </a></li>
+                <li><a href="purpose.html">Purpose of dormitory</a></li>
+                <li><a href="facility.html">Facility</a></li>
+                <li><a href="event.html">Life and Event</a></li>
+                <li><a href="cost.html">About cost</a></li>
+                <li><a href="student.html">Students page</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </div>
     <!--container-->
     <div id="container">
-        <h4>寮内環境の整備</h4>
-        <p class="content">高城寮では、下級生による寮内の清掃が行われています。これは、寮の衛生の向上及び維持をすることで、寮生全員が住みやすい寮にするためです。<br>
-            また、閉寮の際には居室の清掃及び教員によるチェックが行われ、清潔な状態で新学期を迎えます。</p>
+        <h4>Search Results</h4>
+        <ul id="result">
+        </ul>
     </div>
+
     <!--footer-->
     <div class="footer">
         <img src="../../assets/images/footer.png">
-        <a href="../site.html">
-            <p><span id="site">このサイトについて</span></p>
+        <a href="site.html">
+            <p><span id="site">About this site</span></p>
         </a>
         <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
     </div>
 
     <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
     <script src="../../assets/scripts/common.js"></script>
+    <script src="../../assets/scripts/search.js"></script>
     <!--JS取り込み-->
 </body>
 
