--- a/pages/english/cost.html
+++ b/pages/english/cost.html
@@ -83,17 +83,17 @@
   <!--container-->
   <div id="container">
     <div id="container" class="middle">
-      <h4 class="middle-content">Cost of the dormitory</h4>
+      <h4 class="middle-content">Cost of the dormitory(the 3rd year of Reiwa era) </h4>
       <table>
         <tr>
           <th><span class="table-header">Accommodation fee</span></th>
           <td>monthly amount</td>
-          <td>700 yen</td>
+          <td>700 yen(Two-person room)<br>800 yen(Single room)</td>
         </tr>
         <tr>
           <th><span class="table-header">Cost of meals (3 meals a day)</span></th>
           <td>monthly amount</td>
-          <td>37,200 yen</td>
+          <td>about 37,200 yen</td>
         </tr>
         <tr>
           <th><span class="table-header">Light and water heating fees, etc.</span></th>
