--- a/pages/cost.html
+++ b/pages/cost.html
@@ -79,17 +79,17 @@
   </div>
   <!--container-->
   <div id="container" class="middle">
-    <h4 class="middle-content">学寮経費</h4>
+    <h4 class="middle-content">学寮経費(令和3年度)</h4>
     <table>
       <tr>
         <th><span class="table-header">寄宿料</span></th>
         <td>月額</td>
-        <td>700円</td>
+        <td>700円(2人部屋)<br>800円(1人部屋)</td>
       </tr>
       <tr>
         <th><span class="table-header">食費(1日3食)</span></th>
         <td>月額</td>
-        <td>37,200円</td>
+        <td>約37,200円</td>
       </tr>
       <tr>
         <th><span class="table-header">寮費(光熱水費等)</span></th>
