update style on student page

--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -93,7 +93,7 @@
         </a>
       </div>
       <div class="student_element">
-        <p>Dormitory Meals Menu</p>
+        <p>Meals Menu</p>
         <a target="_blank" rel="noopener noreferrer" href="../../assets/pdfs/kondate.pdf">
           <img src="../../assets/images/student/kondate.png">
         </a>
