--- a/pages/student.html
+++ b/pages/student.html
@@ -86,13 +86,13 @@
     </div>
     <div class="student">
       <div class="student_element">
-        <p>電動自転車貸し出しシステム</p>
+        <p>電動自転車貸し出し</p>
         <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
           <img src="../assets/images/student/Bicycle.png">
         </a>
       </div>
       <div class="student_element">
-        <p>寮の献立</p>
+        <p>寮食献立</p>
         <a target="_blank" rel="noopener noreferrer" href="../assets/pdfs/kondate.pdf">
           <img src="../assets/images/student/kondate.png">
         </a>
@@ -105,7 +105,7 @@
         </a>
       </div>
       <div class="student_element">
-        <p>寮食 食数管理システム(欠食申請)</p>
+        <p>欠食申請</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <img src="../assets/images/student/NumberOfMeals.png">
@@ -118,7 +118,7 @@
         </a>
       </div>
       <div class="student_element">
-        <p>徳山高専 年間行事予定表</p>
+        <p>徳山高専 年間行事予定</p>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
           <img src="../assets/images/student/calendar.png">
         </a>
@@ -137,14 +137,14 @@
         </a>
       </div>
       <div class="student_element">
-        <p>サーバ運用申請フォーム</p>
+        <p>サーバ運用申請</p>
         <a target="_blank" rel="noopener noreferrer" href="#">
           <a href="">
             <img src="../assets/images/student/server.png">
           </a>
       </div>
       <div class="student_element">
-        <p>高城寮GitHub参加申請フォーム</p>
+        <p>高城寮GitHub参加申請</p>
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
           <img src="../assets/images/student/GitHub.png">
