change font , welcome_message

--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -52,7 +52,7 @@
     <i class="fas fa-search"></i>
   </header>
   <div id="video-area">
-    <h1>TAKAJO DORMITORY</h1>
+    <h1 id="message">WELCOME TO TAKAJO DORMITORY</h1>
     <video id="video" poster="../../assets/images/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="../../assets/movies/overView.MP4" type="video/mp4">
     </video>
