--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!--header-->
   <header id="header">
     <a href="#">
-      <h1 id="title">Takajo Dormitory</h1>
+      <h1 id="title-ja">高城寮</h1>
     </a>
     <a href="pages/english/index.html">
       <h1 id="lang">ENGLISH</h1>
@@ -52,7 +52,7 @@
     <i class="fas fa-search"></i>
   </header>
   <div id="video-area">
-    <h1>WELCOME TO TAKAJO</h1>
+    <h1 id="message-ja">ようこそ、徳山高専高城寮へ。</h1>
     <video id="video" poster="assets/images/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="assets/movies/overView.MP4" type="video/mp4">
     </video>
