「寮生が制作」を明記

--- a/index.html
+++ b/index.html
@@ -147,8 +147,12 @@
         TakajoDormitory</a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
+    <div class="content">
+      <p> 本サイトは、2020年~2021年に高城寮にて行われた、「高城寮をより住みやすい生活の場にするためのアイディア」のプロジェクトとして、寮生が一から制作しています。<br>
+        ホームページのソースコードは、GitHubで公開しています。<a target="_blank" href="https://github.com/TakajoDormitory/HomePage">ソースコード</a><br>
+        また、高城寮は寮生の情報技術の活用を積極的に支援しています。詳しくは、<a href="pages/endeavors/it.html">情報技術の活用</a>のページをご覧ください。</p>
+    </div>
   </div>
-
   <!--footer-->
   <div class="footer">
 
