--- a/pages/endeavors/it.html
+++ b/pages/endeavors/it.html
@@ -131,22 +131,47 @@
     <div class="content">
       <p class="TextTyping">高城寮では、積極的に情報技術の活用に取り組んでいます。</p>
       <p class="TextTyping">また、ITに興味のある寮生を全面的にバックアップしています。</p>
-      <a href="https://github.com/TakajoDormitory" target="_blank">高城寮GitHub</a>
+      <a href="https://github.com/TakajoDormitory" target="_blank">
+        <p class="TextTyping">高城寮GitHub</p>
+      </a>
     </div>
-  </div>
-  <!--footer-->
-  <div class="footer">
-    <img src="../../assets/images/footer.png">
-    <a href="../site.html">
-      <p><span id="site">このサイトについて</span></p>
-    </a>
-    <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
-  </div>
+    <div id="achievement">
+      <h2 class="TextTyping">実績</h2>
+      <h3 class="TextTyping">2021年度</h3>
+      <ul>
+        <li class="TextTyping">
+          ・自転車貸し出しシステム
+        </li>
+        <li class="TextTyping">
+          ・寮食 食数チェックシステム
+        </li>
+        <li class="TextTyping">
+          ・学寮公式ホームぺージ
+        </li>
+        <li class="TextTyping">
+          ・洗濯機、乾燥機稼働監視システム
+        </li>
+        <li class="TextTyping">
+          ・女子寮お湯張り監視システム
+        </li>
+        <li class="TextTyping">
+          ・点呼チェックシステム
+        </li>
+      </ul>
+    </div>
+    <!--footer-->
+    <div class="footer">
+      <img src="../../assets/images/footer.png">
+      <a href="../site.html">
+        <p><span id="site">このサイトについて</span></p>
+      </a>
+      <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
+    </div>
 
-  <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../../assets/scripts/typing.js"></script>
-  <script src="../../assets/scripts/common.js"></script>
-  <!--JS取り込み-->
+    <script type="text/javascript" src="../../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
+    <script src="../../assets/scripts/typing.js"></script>
+    <script src="../../assets/scripts/common.js"></script>
+    <!--JS取り込み-->
 </body>
 
 </html>
