左上の文字を日本語にした。明朝体にする部分を限定。

--- a/pages/facility.html
+++ b/pages/facility.html
@@ -43,7 +43,7 @@
   <!--header-->
   <header id="header">
     <a href="../index.html">
-      <h1 id="title">Takajo Dormitory</h1>
+      <h1 id="title-ja">高城寮</h1>
     </a>
     <a href="english/index.html">
       <h1 id="lang">ENGLISH</h1>
