--- a/pages/notice/20201022-1.html
+++ b/pages/notice/20201022-1.html
@@ -53,7 +53,7 @@
 <body>
   <!--header-->
   <header id="header"><a href="../../index.html">
-      <h1 id="title">Takajo Dormitory</h1>
+      <h1 id="title-ja">高城寮</h1>
     </a><a href="../english/index.html">
       <h1 id="lang">ENGLISH</h3>
     </a><a href="../location.html"><i class="fas fa-map-marker-alt"></i></a><i class="fas fa-search"></i></header>
