--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -139,7 +139,7 @@
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <a href="">
+          <a href="https://server-register.takajo-dormitory.tk/">
             <img src="../../assets/images/student/server.png">
           </a>
           <p>Server operate application form</p>
