--- a/pages/student.html
+++ b/pages/student.html
@@ -138,7 +138,7 @@
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <a href="">
+          <a href="https://server-register.takajo-dormitory.tk/">
             <img src="../assets/images/student/server.png">
           </a>
           <p>サーバ運用申請</p>
