寮生用ページのコンテンツタイトル改善

--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -90,7 +90,7 @@
         <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
           <img src="../../assets/images/student/Bicycle.png">
         </a>
-        <p>Bicycle rental system</p>
+        <p>Bicycle rental</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="../../assets/pdfs/kondate.pdf">
@@ -103,21 +103,21 @@
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyAmPT3PdlNJEqdHkH2NvOXFUQTE0Q1lGTlZRSUtBRUhPT0JPSTYwUTJHOCQlQCN0PWcu">
           <img src="../../assets/images/student/gaihaku.png">
         </a>
-        <p>Permission to stay out overnight</p>
+        <p>stay out overnight</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer"
           href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2">
           <img src="../../assets/images/student/NumberOfMeals.png">
         </a>
-        <p>Manage system of meals</p>
+        <p>Meals manage</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="#">
           <a href="https://server-register.takajo-dormitory.tk/">
             <img src="../../assets/images/student/server.png">
           </a>
-          <p>Server operate application form</p>
+          <p>Server rental</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
@@ -142,14 +142,14 @@
           href="https://forms.office.com/Pages/ResponsePage.aspx?Host=Teams&lang=%7Blocale%7D&groupId=%7BgroupId%7D&tid=%7Btid%7D&teamsTheme=%7Btheme%7D&upn=%7Bupn%7D&id=XYP-cpVeEkWK4KezivJfyFRDvD4Mh2xOup53lI_6q5dUMzBVRjRNSFBDTTZTNUpQVThOTzk3SzJHSyQlQCN0PWcu">
           <img src="../../assets/images/student/ground.png">
         </a>
-        <p>The schoolyard used log</p>
+        <p>Schoolyard used log</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer"
           href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
           <img src="../../assets/images/student/GitHub.png">
         </a>
-        <p>Takajo GitHub application form</p>
+        <p>GitHub application</p>
       </div>
     </div>
 
