--- a/pages/student.html
+++ b/pages/student.html
@@ -128,7 +128,7 @@
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
           <img src="../assets/images/student/calendar.png">
         </a>
-        <p>徳山高専 年間行事予定</p>
+        <p>徳山高専 行事予定</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/edu/jikanwari.html">
@@ -142,7 +142,7 @@
           <img src="../assets/images/student/GitHub.png">
 
         </a>
-        <p>高城寮GitHub参加申請</p>
+        <p>GitHub参加申請</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer"
