--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <video id="video" poster="assets/images/Thumbnail.png" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="assets/movies/overView.MP4" type="video/mp4">
     </video>
+    <div class="scroll_down"><span>Scroll</span></div>
   </div>
 
   <div id="wrapper">
